k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: api
      port: 8443
      protocol: HTTPS
      hostname: api.vex.localhost
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: api-vex-api-tls
    - name: web
      port: 8443
      protocol: HTTPS
      hostname: app.vex.localhost
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: web-vex-web-tls
